--- a/style.css
+++ b/style.css
@@ -1,69 +1,80 @@
+/* Global styles */
 body {
     font-family: Arial, sans-serif;
-    color: #333; /* Assuming a standard text color as seen in the image */
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0; /* Assuming a light grey background as seen in the image */
-}
-h1 {
-    color: #000080; /* Navy blue color for the main heading, assuming based on the image */
-}
-a:link, a:visited {
-    color: #800000; /* Maroon color for links, assuming based on the image */
-}
-ul {
-    color: #0000FF; /* This will set the color of the text in the ul to blue */
+    color: #333;
 }
 
-ul li {
-    color: #FF0000; /* This will set the color of the text in the li to red */
+/* Styles specific for index.html */
+#indexPage h1 {
+    color: #000080;
 }
 
-/* If you have nested lists and want to style them differently, you can do something like this: */
-ul li ul li {
-    color: #00FF00; /* This will set the color of the text in the nested li to green */
+#indexPage a:link,
+#indexPage a:visited {
+    color: #800000;
 }
-p {
-    color: darkgoldenrod; /* Standard text color */
+
+#indexPage ul {
+    color: #0000FF;
 }
-img {
-    width: 100%; /* Full width of the container */
-    height: auto; /* Keep aspect ratio */
+
+#indexPage ul li {
+    color: #FF0000;
 }
-footer {
+
+#indexPage ul li ul li {
+    color: #00FF00;
+}
+
+#indexPage p {
+    color: darkgoldenrod;
+}
+
+#indexPage img {
+    width: 100%;
+    height: auto;
+}
+
+#indexPage footer {
     text-align: center;
     padding: 10px;
-    background-color: #ddd; /* Light grey background for footer */
-    color: #333; /* Standard text color */
+    background-color: #ddd;
+    color: #333;
 }
 
-/* This is styles.css */
-
-.container {
-    display: flex; /* Use flexbox to align elements side by side */
+/* Styles specific for positions.html */
+#positionsPage .container {
+    display: flex;
+    justify-content: center;
 }
 
-.box {
-    flex: 1; /* Each box will take an equal amount of space */
-    color: white; /* Text color */
-    padding: 20px; /* Some padding inside the boxes */
-    margin: 10px; /* Margin around the boxes */
-    text-align: center; /* Center the text horizontally */
-    vertical-align: middle; /* Center the text vertically */
-    display: flex; /* Use flexbox for centering text vertically */
-    justify-content: center; /* Horizontal centering of text for flexbox */
-    align-items: center; /* Vertical centering of text for flexbox */
+#positionsPage .box {
+    flex: 0 0 20%;
+    color: white;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    border: 4px solid;
 }
 
-#first {
-    background-color: red; /* Red background for the first element */
+#positionsPage #first {
+    background-color: red;
+    border-color: green;
 }
 
-#second {
-    background-color: yellow; /* Yellow background for the second element */
-    color: black; /* Text color for better contrast */
+#positionsPage #second {
+    background-color: yellow;
+    color: black;
+    border-color: red;
 }
 
-#third {
-    background-color: green; /* Green background for the third element */
+#positionsPage #third {
+    background-color: green;
+    border-color: yellow;
 }
